# declarativex

./: BUG_FIXES_SUMMARY.md  COMPLETE_REPORT.md  DOCS_INDEX.md  SECURITY_SUMMARY.md  UPGRADE_PLAN.md  mkdocs.yml  pyproject.toml
.github/workflows/: production.yml  pull-request.yml  tests.yml
docs/: local-development.md
docs/core-concepts/: http-declaration.md
src/declarativex/: client.py  executors.py  models.py  rate_limiter.py  utils.py
tests/: test_async_clients.py  test_middlewares.py  test_rate_limiter.py  test_retry.py  test_sync_clients.py
tests/fixtures/clients/: async_client.py  sync_client.py
tests/fixtures/schemas/: dataclass.py  pydantic.py
