[tool.poetry]
name = "declarativex"
version = "1.0.0"
description = "Declarative HTTP client for Python"
authors = ["Vladyslav Halatskyi <xfloydya@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
documentation = "https://declarativex.dev"
keywords = ["http", "declarative", "client", "async", "httpx", "pydantic"]
repository = "https://github.com/floydya/declarativex"
homepage = "https://declarativex.dev"

[tool.poetry.urls]
"Bug Tracker" = 'https://github.com/floydya/declarativex/issues'

[tool.poetry.dependencies]
python = ">=3.10,<4"
httpx = "^0.28.0"
pydantic = ">1,<3"
h2 = {version = ">=3,<5", optional = true}
brotli = {version = "*", optional = true, markers = "platform_python_implementation == 'CPython'"}
brotlicffi = {version = "*", optional = true, markers = "platform_python_implementation != 'CPython'"}
graphql-py = {version = "^0.8.1", optional = true}

[tool.poetry.extras]
http2 = ["h2"]
brotli = [
    "brotli",
    "brotlicffi",
]
graphql = ["graphql-py"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pylint = "^4.0.0"
pytest = "^8.3.0"
pytest-asyncio = "^1.0.0"
coverage = "^7.13.0"
pytest-cov = "^7.0.0"
mypy = "^1.19.0"
types-setuptools = "^82.0.0"
mkdocs-material = "^9.7.0"
markdown-include = "^0.8.1"
pytest-xdist = "^3.8.0"
pytest-mock = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
log_cli = true
log_cli_level = "INFO"
